<resources>
    <string name="app_name">Engage By Slayed LIfe</string>
    <string name="slayedpinklogo">slayedpinklogo</string>
    <string name="get_connected">Get Connected!</string>
    <string name="login_statement">The social marketplace that allows businesses and influencers of all sizes to take control. Sign in now to get started.</string>
    <string name="login_background">login_background</string>
    <string name="join_with_facebook">Join with Facebook</string>
    <string name="join_with_google">Join with Google</string>
    <string name="facebook_app_id">490378815306744</string>
    <string name="fb_login_protocol_scheme">fb490378815306744</string>
    <string name="ocp_apim_auth_subscription_key">9675f83599d04252a3819787e2a8338d</string>
    <string name="looks_like_your_missing_some_information">Looks like your missing some information</string>
    <string name="server_client_id_release">674696482502-5qi7j3d2mom7cui8le0ucsprvmgqp9oo.apps.googleusercontent.com</string>
    <string name="google_client_id_release">674696482502-5qi7j3d2mom7cui8le0ucsprvmgqp9oo.apps.googleusercontent.com</string>
    <string name="server_client_id_debug">674696482502-n7skvr50cftfgo6vlmubgn5krvcd8hku.apps.googleusercontent.com</string>
    <string name="google_client_id_debug">674696482502-11j36s7u7q486rl5kefkihjk2of3s9se.apps.googleusercontent.com</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">MoTjfcRgwANIftyC5IdW9u31n</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">JC9jM7bnL6atodUGLD2sRhTo6yVSCGOJpobrjHwRGgWdMC6Jhp</string>
    <string name="twitter.access.token">1355037880201203712-VZTDxyDYh7279rFASsT5DfGKJW3vfH</string>
    <string name="twitter.access.token_secret">6ElJasMZLoHfnx0uyKEaHj4iSKQ2YjgvgKGnG7KefUHnE</string>
    <string name="skip">Skip</string>
    <string name="connect_your_social_media_accounts_for_a_better_experience">Connect your social media accounts for a better experience:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="more">More</string>
    <string name="personal_information">Personal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="transactions">Transactions</string>
    <string name="sign_out">Sign Out</string>
    <string name="social_accounts">Social Accounts</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="home">Home</string>
    <string name="business">Business</string>
    <string name="post">Post</string>
    <string name="message">Message</string>
    <string name="promotions">Promotions</string>
    <string name="preferences">Preferences</string>
    <string name="following">Total Following</string>
    <string name="followers">Total Followers</string>
    <string name="engage_level">Engage Level</string>
    <string name="engage_points">Engage Points</string>
    <string name="monthly_sales">Monthly Sales</string>
    <string name="details">Details</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="appointment_request">Appointment Request</string>
    <string name="dashboard">Dashboard</string>
    <string name="engage_username">Engage Username</string>
    <string name="save">Save</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="or">- Or -</string>
    <string name="drop_a_note">Drop a note</string>
    <string name="account_image">account image</string>
    <string name="start_accepting_payments_today">Start Accepting payments today!</string>
    <string name="start_accepting_payments">Start Accepting Payments</string>
    <string name="verify_connection">Verify Connection</string>
    <string name="awsS3AccessKey">AKIAIH7NF6RTCW3XQX6Q</string>
    <string name="awsS3AppSecret">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</string>
    <string name="awsdevBucket">slayed-dev</string>
    <string name="awsprodBucket">slayed-prod</string>
    <string name="payment_account_s_connected">Payment Account\'s Connected</string>
    <string name="verify_account">Verify Account</string>
    <string name="not_accepting_payments">Not Accepting Payments</string>
    <string name="connected">Connected</string>
    <string name="payment_account_status">Payment Account Status:</string>
    <string name="need_additional_information">Need Additional Information</string>
    <string name="services">Services</string>
    <string name="products">Products</string>
    <string name="product_or_service">product or service</string>
    <string name="product_name">Product Name*</string>
    <string name="sku">Sku*</string>
    <string name="taxes">Taxes*</string>
    <string name="price">Price*</string>
    <string name="state_for_sales_tax">State For Sales Tax*</string>
    <string name="shipping">Shipping*</string>
    <string name="sizes">Sizes*</string>
    <string name="type">Type</string>
    <string name="description">Description*</string>
    <string name="discount">Discount</string>
    <string name="rotate">rotate</string>
    <string name="crop">crop</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="delete">Delete</string>
    <string name="qty">Qty</string>
    <string name="product_image">product image</string>
    <string name="service_name">Service Name</string>
    <string name="service_image">Service Image</string>
    <string name="how_long_does_this_usually_take">How long does this usually take?</string>
    <string name="manage_schedule">Manage Schedule</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="closed">closed</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="end">end</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="add_custom_date_hours">Add Custom Date Hours</string>
</resources>