<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:contentDescription="@string/home" />
    <item
        android:id="@+id/business"
        android:title="@string/business"
        android:icon="@drawable/ic_baseline_business_center_24"
        android:contentDescription="@string/business" />
    <item
        android:id="@+id/message"
        android:title="@string/message"
        android:icon="@drawable/ic_baseline_message_24"
        android:contentDescription="@string/message" />
    <item
        android:id="@+id/post"
        android:title="@string/post"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:contentDescription="@string/post" />
    <item
        android:id="@+id/promotions"
        android:title="@string/promotions"
        android:icon="@drawable/ic_baseline_monetization_on_24"
        android:contentDescription="@string/promotions"/>
</menu>