<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activities.PersonalInformationActivity">
    <include layout="@layout/navigation_dead_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_navigation"/>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="invisible"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:id="@+id/progress_bar"
        app:trackColor="@color/pink_100"
        app:indicatorColor="@color/blue_100"
        android:indeterminate="true" />
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/engage_username"
            android:id="@+id/username"
            android:fontFamily="@font/montserrat"
            android:layout_marginRight="16dp"
            android:enabled="false"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/first_name"
            android:id="@+id/firstName"
            android:fontFamily="@font/montserrat"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:id="@+id/lastName"
            android:fontFamily="@font/montserrat"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/phone"
            android:id="@+id/phone"
            android:fontFamily="@font/montserrat"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/email"
           android:enabled="false"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/montserrat"
            android:layout_marginEnd="16dp" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:id="@+id/dob"
            android:fontFamily="@font/montserrat"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:maxLines="1"
            android:focusable="false"
            android:clickable="true"
            android:onClick="showStartDatePickerDialog"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
    </LinearLayout>
</LinearLayout>