<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.ContactUsActivity">
    <include layout="@layout/navigation_dead_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_navigation"/>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="invisible"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        android:id="@+id/progress_bar"
        app:trackColor="@color/pink_100"
        app:indicatorColor="@color/blue_100"
        android:indeterminate="true" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:id="@+id/instagram_connect"
            android:onClick="Instagram"
            android:text="@string/instagram"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/twttier_connect"
            android:text="@string/twitter"
            android:layout_marginRight="16dp"
            android:onClick="Twitter"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"

            android:layout_height="wrap_content" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/email_connect"
            android:text="@string/email"
            android:onClick="Email"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_height="wrap_content" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:text="@string/or"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drop_a_note"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="8"
            android:id="@+id/note"
            android:layout_gravity="top"
            android:textAlignment="gravity"
            android:maxLength="400" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>