<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.fragment_user_dashboard">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/padding"
        android:layout_height="80dp"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:columnCount="1"
            android:orientation="vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="16dp"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                android:id="@+id/no_payment_account_card"
                app:strokeColor="@color/basegray"
                app:cardElevation="4dp"
                android:visibility="gone"
                android:layout_gravity="fill"
                android:layout_width="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:id="@+id/payment_connected_label"
                        android:text="@string/start_accepting_payments_today"
                        app:fontFamily="@font/montserrat"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal" />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:id="@+id/payment_connected"
                        android:textColor="@color/teal_200"
                        android:visibility="gone"
                        android:text="@string/payment_account_s_connected"
                        app:fontFamily="@font/montserrat"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal" />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:id="@+id/connect_stripe_button"
                        android:text="@string/start_accepting_payments"
                        android:layout_height="wrap_content"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        android:id="@+id/connect_verify_button"
                        android:text="@string/verify_account"
                        android:backgroundTint="@color/pink_100"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content"
                app:strokeWidth="1dp"
                android:visibility="gone"
                android:id="@+id/account_card"
                app:strokeColor="@color/basegray"
                app:cardElevation="4dp"
                android:layout_gravity="fill"
                android:layout_width="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:id="@+id/payment_connected_status_label"
                        android:visibility="visible"
                        android:text="@string/payment_account_status"
                        app:fontFamily="@font/montserrat"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal" />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:id="@+id/connected"
                        android:textColor="@color/teal_200"
                        android:visibility="gone"
                        android:textSize="16sp"
                        android:text="@string/connected"
                        app:fontFamily="@font/montserrat"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal" />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:id="@+id/disconnected"
                        android:textColor="@color/google_red_200"
                        android:visibility="gone"
                        android:textSize="16sp"
                        android:text="@string/not_accepting_payments"
                        app:fontFamily="@font/montserrat"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_horizontal" />
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_gravity="end"
                        android:visibility="gone"
                        android:layout_marginTop="20dp"
                        android:id="@+id/need_more_information"
                        android:text="@string/need_additional_information"
                        android:layout_height="wrap_content"/>
                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        android:id="@+id/connect_verify_button2"
                        android:text="@string/verify_account"
                        android:backgroundTint="@color/pink_100"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <GridLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:columnCount="2"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    app:strokeWidth="1dp"
                    android:clickable="true"
                    android:layout_columnWeight="1"
                    android:visibility="visible"
                    android:id="@+id/product_card"
                    app:strokeColor="@color/basegray"
                    android:layout_marginEnd="10dp"
                    app:cardElevation="4dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="175dp"
                    android:focusable="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:id="@+id/product_label"
                            android:visibility="visible"
                            android:text="@string/products"
                            app:fontFamily="@font/montserrat"
                            style="@style/TextAppearance.MaterialComponents.Headline6"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <com.google.android.material.card.MaterialCardView
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    app:strokeWidth="1dp"
                    android:clickable="true"
                    android:visibility="visible"
                    android:id="@+id/service_card"
                    app:strokeColor="@color/basegray"
                    app:cardElevation="4dp"
                    android:layout_marginStart="10dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="175dp"
                    android:focusable="true">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:id="@+id/service_label"
                            android:visibility="visible"
                            android:text="@string/services"
                            app:fontFamily="@font/montserrat"
                            style="@style/TextAppearance.MaterialComponents.Headline6"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </GridLayout>
            <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:strokeWidth="1dp"
            android:clickable="true"
            android:visibility="visible"
            android:id="@+id/schedle_card"
            app:strokeColor="@color/basegray"
            app:cardElevation="4dp"
            android:layout_columnWeight="1"
            android:layout_width="match_parent"
            android:focusable="true">
            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/schedule_label"
                    android:visibility="visible"
                    app:fontFamily="@font/montserrat"
                    android:text="@string/manage_schedule"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
